# go-fuzz-libafl

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  harness.c
go_app/: README.md  main.go
go_app/tlib/: tlib.go  tlib_test.go
go_lib/: .rustc_info.json  README.md  go.mod  main.go
go_lib/tlib/: tlib.go  tlib_test.go
go_lib/tlib/testdata/fuzz/FuzzStringContainsAt/: 98f950e9fff72dad  9b1a537b29a79976  ffbab10f789a4f01
json_corpus/: j1.json  j2.json
src/: fuzzer.rs  main.rs  simple_fuzzer.rs
src/mutators/: json.rs  mod.rs  random_ascii_chars.rs  random_resize.rs
